Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/SalesIQ__Position__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__RoleId__c</fullName>
        <label>RoleId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>SalesIQ__Territory__c</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <columns>NAME</columns>
        <columns>SalesIQ__RoleId__c</columns>
        <columns>SalesIQ__Territory__c</columns>
        <columns>SalesIQ__User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>